syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.kmingulov.math.model";
option java_outer_classname = "ComputationServiceProto";

package math_service;

service ComputationService {
    rpc ComputeExpression (ComputationRequest) returns (ComputationId) {}
    rpc ComputeExpressions (stream ComputationRequest) returns (stream ComputationId) {}
    rpc GetComputationResult (ComputationId) returns (ComputationResult) {}
}

message ComputationId {
    string id = 1;
}

message ComputationRequest {
    string expression = 1;
}

enum ComputationState {
    PENDING = 0;
    RUNNING = 1;
    ERROR = 2;
    COMPUTED = 3;
}

message ComputationResult {
    ComputationState state = 1;
    oneof error_or_result {
        string error = 2;
        double result = 3;
    }
}
