syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.kmingulov.math.model";

package streaming;

message StreamingStop {

}
